--- a/application-error.html
+++ b/application-error.html
@@ -1,1 +1,12 @@
-Hello World 2
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta charset="UTF-8" />
+    <title>Application Error</title>
+  </head>
+  <body>
+    <h1>Application Error</h1>
+    <p>We're sorry, but an error has occurred while processing your request.</p>
+    <p>Please try again later.</p>
+  </body>
+</html>
