--- a/application-error.html
+++ b/application-error.html
@@ -2,11 +2,27 @@
 <html>
   <head>
     <meta charset="UTF-8" />
-    <title>Application Error</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <script src="https://cdn.tailwindcss.com"></script>
   </head>
   <body>
-    <h1>Application Error</h1>
-    <p>We're sorry, but an error has occurred while processing your request.</p>
-    <p>Please try again later.</p>
+    <div style="background: rgb(249, 249, 249)">
+      <div class="flex items-center justify-center min-h-screen">
+        <div class="p-8 text-center">
+          <h1 class="text-3xl font-bold">
+            Shopify is experiencing some issues
+          </h1>
+          <p>
+            Please check
+            <a
+              class="text-blue-600 visited:text-purple-600"
+              href="https://www.shopifystatus.com/"
+              >Shopify status page</a
+            >
+            for updates
+          </p>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
