--- a/application-error.html
+++ b/application-error.html
@@ -17,6 +17,7 @@
             <a
               class="text-blue-600 visited:text-purple-600"
               href="https://www.shopifystatus.com/"
+              target="_blank"
               >Shopify status page</a
             >
             for updates
