--- a/maintenance-page.html
+++ b/maintenance-page.html
@@ -9,19 +9,14 @@
     <div style="background: rgb(249, 249, 249)">
       <div class="flex items-center justify-center min-h-screen">
         <div class="p-8 text-center">
-          <img src="https://cache-essential-apps.cc/empty1.png" alt="logo" />
+          <img src="https://cache-essential-apps.cc/empty1.png" alt="logo" class="mx-auto" />
           <h1 class="text-3xl font-bold">
-            Shopify is experiencing some issues
+            Application is under maitenance. <br>
+            It will be available in 10 minutes.
           </h1>
-          <p>
-            Please check
-            <a
-              class="text-blue-600 visited:text-purple-600"
-              href="https://www.shopifystatus.com/"
-              target="_blank"
-              >Shopify status page</a
-            >
-            for updates
+          <p class="p-8">
+            We are currently performing scheduled maintenance to improve your experience. <br>
+            During this time, our application will be temporarily unavailable.
           </p>
         </div>
       </div>
