--- a/application-error.html
+++ b/application-error.html
@@ -9,7 +9,7 @@
     <div style="background: rgb(249, 249, 249)">
       <div class="flex items-center justify-center min-h-screen">
         <div class="p-8 text-center">
-          <img src="https://cache-essential-apps.cc/empty1.png" alt="logo" />
+          <img src="https://cache-essential-apps.cc/empty1.png" alt="logo" class="mx-auto"/>
           <h1 class="text-3xl font-bold">
             Shopify is experiencing some issues
           </h1>
