with logo and new copy

--- a/maintenance-page.html
+++ b/maintenance-page.html
@@ -9,14 +9,12 @@
     <div style="background: rgb(249, 249, 249)">
       <div class="flex items-center justify-center min-h-screen">
         <div class="p-8 text-center">
-          <img src="https://cache-essential-apps.cc/empty1.png" alt="logo" class="mx-auto" />
-          <h1 class="text-3xl font-bold">
-            Application is under maitenance. <br>
-            It will be available in 10 minutes.
+          <img src="icon.png" alt="logo" class="mx-auto" width="100px"/>
+          <h1 class="text-xl font-bold">
+            Our application is currently undergoing maintenance <br> and will be available again in approximately 10 minutes.
           </h1>
           <p class="p-8">
-            We are currently performing scheduled maintenance to improve your experience. <br>
-            During this time, our application will be temporarily unavailable.
+            We appreciate your patience and apologize for any inconvenience caused.
           </p>
         </div>
       </div>
