--- a/maintenance-page.html
+++ b/maintenance-page.html
@@ -9,7 +9,7 @@
     <div style="background: rgb(249, 249, 249)">
       <div class="flex items-center justify-center min-h-screen">
         <div class="p-8 text-center">
-          <img src="icon.png" alt="logo" class="mx-auto" width="100px"/>
+          <img src="icon.png" alt="logo" class="mx-auto m-4" width="100px"/>
           <h1 class="text-xl font-bold">
             Our application is currently undergoing maintenance <br> and will be available again in approximately 10 minutes.
           </h1>
