--- a/maintenance-page.html
+++ b/maintenance-page.html
@@ -14,7 +14,7 @@
             Our application is currently undergoing maintenance <br> and will be available again in approximately 10 minutes.
           </h1>
           <p class="p-8">
-            We appreciate your patience and apologize for any inconvenience caused.
+            We appreciate your patience and apologize for any inconvenience this may cause.
           </p>
         </div>
       </div>
